[gd_scene load_steps=23 format=1]

[ext_resource path="res://main_menu.gd" type="Script" id=1]
[ext_resource path="res://bg_grasslands.png" type="Texture" id=2]
[ext_resource path="res://images/menu-left.png" type="Texture" id=3]
[ext_resource path="res://images/menu-right.png" type="Texture" id=4]
[ext_resource path="res://background-grass-plants4.png" type="Texture" id=5]
[ext_resource path="res://Oswald-regular-44.fnt" type="BitmapFont" id=6]
[ext_resource path="res://images/button-play.png" type="Texture" id=7]
[ext_resource path="res://images/button-play2.png" type="Texture" id=8]
[ext_resource path="res://images/button-instructions.png" type="Texture" id=9]
[ext_resource path="res://images/button-instructions2.png" type="Texture" id=10]
[ext_resource path="res://images/button-story.png" type="Texture" id=11]
[ext_resource path="res://images/button-story2.png" type="Texture" id=12]
[ext_resource path="res://images/button-story-text.png" type="Texture" id=13]
[ext_resource path="res://chibi-blue-sky-theme.ogg" type="AudioStream" id=14]

[sub_resource type="Animation" id=1]

resource/name = "left_pan_right"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("camera-main:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 1 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 315, 239.716 ), Vector2( 1280, 239.716 ) ]
}

[sub_resource type="Animation" id=2]

resource/name = "main_pan_left"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("camera-main:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 1 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1200.94, 239.716 ), Vector2( 315, 239.716 ) ]
}

[sub_resource type="Animation" id=3]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("camera-main:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 1 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1200.94, 239.716 ), Vector2( 2100.64, 239.716 ) ]
}

[sub_resource type="Animation" id=4]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("camera-main:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 1 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 2100.64, 239.716 ), Vector2( 1120, 239.716 ) ]
}

[sub_resource type="Animation" id=5]

length = 1.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("left-screen/story-1:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 1.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[sub_resource type="Animation" id=6]

resource/name = "story-2_appear"
length = 3.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("left-screen/story-1:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 1.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("left-screen/story-2:visibility/opacity")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 1.5, 3 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[sub_resource type="Animation" id=7]

length = 3.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("left-screen/story-2:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 1.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("left-screen/story-3:visibility/opacity")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 1.5, 3 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[sub_resource type="Animation" id=8]

resource/name = "story-4_appear"
length = 3.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("left-screen/story-3:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 1.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("left-screen/story-4:visibility/opacity")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 1.5, 3 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[node name="main_screen" type="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
script/script = ExtResource( 1 )

[node name="main" type="Control" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="background" type="Sprite" parent="main"]

transform/pos = Vector2( 1361.15, 306.447 )
transform/scale = Vector2( 2.22922, 1 )
texture = ExtResource( 2 )

[node name="right_left" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1726.0
margin/top = 351.0
margin/right = 1796.0
margin/bottom = 491.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 3 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="left_right" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 596.0
margin/top = 347.0
margin/right = 666.0
margin/bottom = 487.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 4 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="trees" type="Sprite" parent="."]

transform/pos = Vector2( 517.739, 223.135 )
texture = ExtResource( 5 )

[node name="trees2" type="Sprite" parent="."]

transform/pos = Vector2( 1481.07, 224.39 )
texture = ExtResource( 5 )

[node name="trees3" type="Sprite" parent="."]

transform/pos = Vector2( 2498.8, 228.115 )
texture = ExtResource( 5 )

[node name="score" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 985.0
margin/top = 48.0
margin/right = 1185.0
margin/bottom = 101.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Best Score:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="time" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 988.0
margin/top = 121.0
margin/right = 1084.0
margin/bottom = 171.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Time: "
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="play" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1143.0
margin/top = 208.0
margin/right = 1270.0
margin/bottom = 266.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 7 )
textures/hover = ExtResource( 8 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="camera-main" type="Camera2D" parent="."]

transform/pos = Vector2( 1280, 239.716 )
anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit/left = -10000000
limit/top = -10000000
limit/right = 10000000
limit/bottom = 10000000
drag_margin/h_enabled = true
drag_margin/v_enabled = true
smoothing/enable = false
smoothing/speed = 5.0
drag_margin/left = 0.2
drag_margin/top = 0.2
drag_margin/right = 0.2
drag_margin/bottom = 0.2

[node name="camera-left" type="Camera2D" parent="."]

visibility/visible = false
transform/pos = Vector2( 400.995, 240.292 )
anchor_mode = 1
rotating = false
current = false
zoom = Vector2( 1, 1 )
limit/left = -10000000
limit/top = -10000000
limit/right = 10000000
limit/bottom = 10000000
drag_margin/h_enabled = true
drag_margin/v_enabled = true
smoothing/enable = false
smoothing/speed = 5.0
drag_margin/left = 0.2
drag_margin/top = 0.2
drag_margin/right = 0.2
drag_margin/bottom = 0.2

[node name="camera-right" type="Camera2D" parent="."]

visibility/visible = false
transform/pos = Vector2( 1999.41, 239.409 )
anchor_mode = 1
rotating = false
current = false
zoom = Vector2( 1, 1 )
limit/left = -10000000
limit/top = -10000000
limit/right = 10000000
limit/bottom = 10000000
drag_margin/h_enabled = true
drag_margin/v_enabled = true
smoothing/enable = false
smoothing/speed = 5.0
drag_margin/left = 0.2
drag_margin/top = 0.2
drag_margin/right = 0.2
drag_margin/bottom = 0.2

[node name="main_right" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1335.0
margin/top = 316.0
margin/right = 1462.0
margin/bottom = 386.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 9 )
textures/hover = ExtResource( 10 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="main_left" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 975.0
margin/top = 313.0
margin/right = 1102.0
margin/bottom = 383.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 11 )
textures/hover = ExtResource( 12 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="left-screen" type="Control" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -1659.0
margin/top = 2.0
margin/right = -1619.0
margin/bottom = 42.0

[node name="story-1" type="Label" parent="left-screen"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 1726.0
margin/top = 73.0
margin/right = 2324.0
margin/bottom = 126.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "You're a happy little fox, but someone's
been stealing your Tazo Chai tea!"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="story-2" type="Label" parent="left-screen"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 1724.0
margin/top = 73.0
margin/right = 2292.0
margin/bottom = 176.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Show them WHAT'S WHAT!!!"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="story-3" type="Label" parent="left-screen"]

visibility/opacity = 0.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 1724.0
margin/top = 73.0
margin/right = 2345.0
margin/bottom = 176.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Collect coins to buy more CHAI! and throw
something at them to defeat
the thieving, red-headed buggers!"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="story-4" type="Label" parent="left-screen"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 1724.0
margin/top = 73.0
margin/right = 2345.0
margin/bottom = 176.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "You win when no carrot-topped
nuisances remain!
MUAHAHAHAHA!!! \\o/ !!!"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="continue-story" type="TextureButton" parent="left-screen"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1741.0
margin/top = 265.0
margin/right = 2081.0
margin/bottom = 375.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 13 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="continue-story-text" type="Label" parent="left-screen/continue-story"]

rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 17.0
margin/top = 18.0
margin/right = 344.0
margin/bottom = 68.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Tell me a story!"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="right-screen" type="Control" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="instructions" type="Label" parent="right-screen"]

rect/scale = Vector2( 0.85, 0.85 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 1671.0
margin/top = 28.0
margin/right = 2527.0
margin/bottom = 237.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Collect coins and defeat the baddies!
The clock stops when there are no baddies left.
The goal is to have the most coins
in the fastest time."
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="controls" type="Label" parent="right-screen"]

rect/scale = Vector2( 0.85, 0.85 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 1961.0
margin/top = 243.0
margin/right = 2442.0
margin/bottom = 452.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.0159454, 0.254561, 0.371094, 1 )
text = "Move Left - A or Left Arrow
Move Right - D or Right Arrow
Jump - Spacebar or Up Arrow
Attack - E"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="camera_movement" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/left_pan_right = SubResource( 1 )
anims/main_pan_left = SubResource( 2 )
anims/main_pan_right = SubResource( 3 )
anims/right_pan_left = SubResource( 4 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="story_animation" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/story-1_appear = SubResource( 5 )
anims/story-2_appear = SubResource( 6 )
anims/story-3_appear = SubResource( 7 )
anims/story-4_appear = SubResource( 8 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="menu-song" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 14 )
stream/play = false
stream/loop = true
stream/volume_db = 5.0
stream/autoplay = true
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[connection signal="pressed" from="right_left" to="." method="_on_right_left_pressed"]

[connection signal="pressed" from="left_right" to="." method="_on_left_right_pressed"]

[connection signal="pressed" from="play" to="." method="_on_play_pressed"]

[connection signal="pressed" from="main_right" to="." method="_on_main_right_pressed"]

[connection signal="pressed" from="main_left" to="." method="_on_main_left_pressed"]

[connection signal="pressed" from="left-screen/continue-story" to="." method="_on_continuestory_pressed"]


